--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -38,7 +38,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="/listings">Explore</a>
+        <a class="nav-link" href="/listings"><b>Explore</b></a>
       </div>
       <!-- Search bar -->
       <div class="navbar-nav ms-auto">
