--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -126,7 +126,7 @@
           alt="listing_image"
           style="height: 20rem"
         />
-        <div class="card-img-overlay">abcd</div>
+        <div class="card-img-overlay"></div>
         <div class="card-body">
           <p class="card-text">
             <b> <%=listing.title%> </b> <br />
