--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -21,6 +21,7 @@
 
     .filter p {
       font-size: 0.8rem;
+      color: black;
     }
 
     .tax-info {
@@ -36,61 +37,104 @@
       display: flex;
       align-items: center;
     }
+    a {
+      text-decoration: none;
+    }
+    a i {
+      text-decoration: none;
+      color: black;
+    }
   </style>
 
   <div id="filters">
     <div class="filter">
-      <div><i class="bi bi-fire"></i></div>
-
-      <p>Trending</p>
+      <div>
+        <a href="http://localhost:5004/listings/Rooms/tags"
+          ><i class="bi bi-fire"></i>
+          <p>Trendings</p></a
+        >
+      </div>
     </div>
 
     <div class="filter">
-      <div><i class="fa-solid fa-bed"></i></div>
-
-      <p>Rooms</p>
+      <div>
+        <a href="http://localhost:5004/listings/Rooms/tags"
+          ><i class="fa-solid fa-bed"></i>
+          <p>Rooms</p></a
+        >
+      </div>
     </div>
 
     <div class="filter">
-      <div><i class="fa-solid fa-building"></i></div>
-
-      <p>Iconic Cites</p>
+      <div>
+        <a href="http://localhost:5004/listings/Iconic Cites/tags"
+          ><i class="fa-solid fa-building"></i>
+          <p>Iconic Cites</p></a
+        >
+      </div>
     </div>
 
     <div class="filter">
-      <div><i class="fa-solid fa-mountain-sun"></i></div>
-
-      <p>Mountain</p>
+      <div>
+        <a href="http://localhost:5004/listings/Mountain/tags"
+          ><i class="fa-solid fa-mountain-sun"></i>
+          <p>Mountain</p></a
+        >
+      </div>
     </div>
-    <div class="filter">
-      <div><i class="fa-brands fa-fort-awesome"></i></div>
 
-      <p>Castles</p>
+    <div class="filter">
+      <div>
+        <a href="http://localhost:5004/listings/Castles/tags"
+          ><i class="fa-brands fa-fort-awesome"></i>
+          <p>Castles</p></a
+        >
+      </div>
     </div>
-    <div class="filter">
-      <div><i class="fa-solid fa-person-swimming"></i></div>
 
-      <p>Amazing Pools</p>
+    <div class="filter">
+      <div>
+        <a href="http://localhost:5004/listings/Amazing Pools/tags"
+          ><i class="fa-solid fa-person-swimming"></i>
+          <p>Amazing Pools</p></a
+        >
+      </div>
     </div>
-    <div class="filter">
-      <div><i class="fa-solid fa-campground"></i></div>
 
-      <p>Camping</p>
+    <div class="filter">
+      <div>
+        <a href="http://localhost:5004/listings/Camping/tags"
+          ><i class="fa-solid fa-campground"></i>
+          <p>Camping</p></a
+        >
+      </div>
     </div>
-    <div class="filter">
-      <div><i class="fa-solid fa-cow"></i></div>
 
-      <p>Farms</p>
+    <div class="filter">
+      <div>
+        <a href="http://localhost:5004/listings/Farms/tags"
+          ><i class="fa-solid fa-cow"></i>
+          <p>Farms</p></a
+        >
+      </div>
     </div>
-    <div class="filter">
-      <div><i class="fa-solid fa-snowflake"></i></div>
 
-      <p>Arctic</p>
+    <div class="filter">
+      <div>
+        <a href="http://localhost:5004/listings/Arctic/tags"
+          ><i class="fa-solid fa-snowflake"></i>
+          <p>Arctic</p></a
+        >
+      </div>
     </div>
-    <div class="filter">
-      <div><i class="fa-solid fa-umbrella-beach"></i></div>
 
-      <p>Beach</p>
+    <div class="filter">
+      <div>
+        <a href="http://localhost:5004/listings/Beach/tags"
+          ><i class="fa-solid fa-umbrella-beach"></i>
+          <p>Beach</p></a
+        >
+      </div>
     </div>
     <!-- <div class="filter">
         <div><i class="fa-solid fa-water"></i></div>
