--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -40,6 +40,24 @@
         <label for="image" class="form-label">Upload New Image</label>
         <input name="listing[image]" type="file" class="form-control" />
       </div>
+      <!-- Enter your Listing Tags -->
+      <div class="mb-2 col-4">
+        <label for="tags" class="form-label">Enter your Listing Tags</label>
+        <select id="tags" name="listing[tags]">
+          <option value="Rooms">Rooms</option>
+          <option value="Iconic-cities">Iconic Cities</option>
+          <option value="Mountain">Mountain</option>
+          <option value="Castles">Castles</option>
+          <option value="Amazing-pools">Amazing Pools</option>
+          <option value="Camping">Camping</option>
+          <option value="Farms">Farms</option>
+          <option value="Arctic">Arctic</option>
+          <option value="Beach">Beach</option>
+        </select>
+
+        <div class="valid-feedback">Good !Your Write about your charge.</div>
+        <div class="invalid-feedback">Oops!Please give Price.</div>
+      </div>
 
       <div class="row">
         <div class="mb-3 col-md-4">
